# public-terminal

./: .coverage  .env.example  .gitignore  LICENSE  README.md  app.py  client.py  config.py  conftest.py  go.mod  go.sum  main.py  modals.py  options.py  pyproject.toml  rebalance.py  rebalance_config.json  test_app.py  test_audit.py  test_config.py  test_options.py  test_rebalance.py  widgets.py
.github/workflows/: ci.yml  release.yml
agents/: __init__.py  account.py  market_data.py  options.py  orders.py
cache/: today_buys.json
cmd/public-terminal/: main.go
cmd/render-audit/: main.go
cmd/verify-types/: main.go
conductor/tracks/2026-04-28-github-actions-test-suite/: plan.md
docs/: GO_MIGRATION.md
docs/superpowers/plans/: 2026-04-28-multi-account.md
docs/superpowers/specs/: 2026-04-28-multi-account-design.md  2026-04-29-full-rebalance-design.md  2026-04-29-standardized-etf-retrieval.md
internal/api/: cache.go  client.go  client_test.go  portfolio_calc.go  portfolio_calc_test.go  types.go  types_test.go
internal/config/: config.go  config_test.go  migrate.go  systemd.go
internal/options/: options.go  options_test.go
internal/rebalance/: index.go  marketcap.go  marketcap_test.go  orders.go  orders_test.go  rand.go  rebalance.go  rebalance_test.go  xlsx.go
internal/tui/: app.go  app_test.go  keymap.go  keymap_test.go  styles.go
internal/tui/components/: balance.go  balance_test.go  chart.go  crypto.go  (+5 more)
public_terminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: public-terminal-rebalance.service  public-terminal-rebalance.timer
(+11 files in other folders)
