[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-terminal"
version = "0.2.4"
description = "Programmatic trading terminal for stocks, ETFs, options, crypto, and bonds via Public.com API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.0.0",
    "openpyxl>=3.1.5",
    "plotext>=5.2.8",
    "publicdotcom-py>=0.1.10",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
    "yfinance>=0.2.50",
]

[project.scripts]
public-terminal = "main:main"
public-terminal-rebalance = "rebalance:rebalance"

[tool.setuptools]
py-modules = ["app", "client", "config", "main", "modals", "rebalance", "widgets"]

[dependency-groups]
dev = [
    "bandit>=1.7.7",
    "pyinstaller>=6.19.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[tool.bandit]
exclude_dirs = ["tests", "test_*.py", ".venv", "build", "dist"]
skips = ["B101", "B310"] # B310 is urlopen which we use for fetching market caps
